Layout changes to table for more totals and appropriate handling of # bonds.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                             <th class="table-cell-G" id="tableHeadingT">G</th>
                             <th class="table-cell-C" id="tableHeadingC">C</th>
                             <th class="table-cell-U" id="tableHeadingU">U</th>
+                            <th class="table-cell-Total" id="tableHeadingTotal">Total</th>
                             <th class="table-cell-Hash" id="tableHeadingHash">#</th>
                         </tr>
                         <tr class="table-type-row base-type-DNA" id="row-DNA">
@@ -57,8 +58,9 @@
                             <td class="table-cell-T" id="amountDNA_T">0</td>
                             <td class="table-cell-G" id="amountDNA_G">0</td>
                             <td class="table-cell-C" id="amountDNA_C">0</td>
-                            <td class="table-cell-U" id="amountDNA_U">0</td>
-                            <td class="table-cell-Hash"id="amountDNA_Hash">0</td>
+                            <td class="table-cell-U" id="amountDNA_U">0</td>                            
+                            <td class="table-cell-Total" id="amoutDNA_Total">0</td>
+                            <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row base-type-RNA" id="row-RNA">
                             <th class="table-cell-type" id="tableHeadingRNA">RNA (rN)</th>
@@ -66,8 +68,9 @@
                             <td class="table-cell-T" id="amountRNA_T">0</td>
                             <td class="table-cell-G" id="amountRNA_G">0</td>
                             <td class="table-cell-C" id="amountRNA_C">0</td>
-                            <td class="table-cell-U" id="amountRNA_U">0</td>
-                            <td class="table-cell-Hash"id="amountRNA_Hash">0</td>
+                            <td class="table-cell-U" id="amountRNA_U">0</td>                            
+                            <td class="table-cell-Total" id="amoutRNA_Total">0</td>
+                            <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row base-type-Fluoro" id="row-Fluoro">
                             <th class="table-cell-type" id="tableHeadingFluoro">2'Fluoro RNA (fN)</th>
@@ -75,8 +78,9 @@
                             <td class="table-cell-T" id="amountFluoro_T">0</td>
                             <td class="table-cell-G" id="amountFluoro_G">0</td>
                             <td class="table-cell-C" id="amountFluoro_C">0</td>
-                            <td class="table-cell-U" id="amountFluoro_U">0</td>
-                            <td class="table-cell-Hash"id="amountFluoro_Hash">0</td>
+                            <td class="table-cell-U" id="amountFluoro_U">0</td>                            
+                            <td class="table-cell-Total" id="amoutFluoro_Total">0</td>
+                            <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row base-type-LNA" id="row-LNA">
                             <th class="table-cell-type" id="tableHeadingLNA">LNA (lN)</th>
@@ -84,8 +88,9 @@
                             <td class="table-cell-T" id="amountLNA_T">0</td>
                             <td class="table-cell-G" id="amountLNA_G">0</td>
                             <td class="table-cell-C" id="amountLNA_C">0</td>
-                            <td class="table-cell-U" id="amountLNA_U">0</td>
-                            <td class="table-cell-Hash"id="amountLNA_Hash">0</td>
+                            <td class="table-cell-U" id="amountLNA_U">0</td>                            
+                            <td class="table-cell-Total" id="amoutLNA_Total">0</td>
+                            <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row base-type-OMe" id="row-OMe">
                             <th class="table-cell-type" id="tableHeadingOMe">2'OMe RNA (mN)</th>
@@ -93,8 +98,9 @@
                             <td class="table-cell-T" id="amountOMe_T">0</td>
                             <td class="table-cell-G" id="amountOMe_G">0</td>
                             <td class="table-cell-C" id="amountOMe_C">0</td>
-                            <td class="table-cell-U" id="amountOMe_U">0</td>
-                            <td class="table-cell-Hash"id="amountOMe_Hash">0</td>
+                            <td class="table-cell-U" id="amountOMe_U">0</td>                            
+                            <td class="table-cell-Total" id="amoutOMe_Total">0</td>
+                            <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row base-type-FANA" id="row-FANA">
                             <th class="table-cell-type" id="tableHeadingFANA">FANA (aN)</th>
@@ -102,8 +108,9 @@
                             <td class="table-cell-T" id="amountFANA_T">0</td>
                             <td class="table-cell-G" id="amountFANA_G">0</td>
                             <td class="table-cell-C" id="amountFANA_C">0</td>
-                            <td class="table-cell-U" id="amountFANA_U">0</td>
-                            <td class="table-cell-Hash"id="amountFANA_Hash">0</td>
+                            <td class="table-cell-U" id="amountFANA_U">0</td>                            
+                            <td class="table-cell-Total" id="amoutFANA_Total">0</td>
+                            <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row base-type-ANA" id="row-ANA">
                             <th class="table-cell-type" id="tableHeadingANA">ANA (araN)</th>
@@ -111,8 +118,9 @@
                             <td class="table-cell-T" id="amountANA_T">0</td>
                             <td class="table-cell-G" id="amountANA_G">0</td>
                             <td class="table-cell-C" id="amountANA_C">0</td>
-                            <td class="table-cell-U" id="amountANA_U">0</td>
-                            <td class="table-cell-Hash"id="amountANA_Hash">0</td>
+                            <td class="table-cell-U" id="amountANA_U">0</td>                            
+                            <td class="table-cell-Total" id="amoutANA_Total">0</td> 
+                            <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row" id="row-Total">
                             <th class="table-cell-type" id="tableHeadingTotals">Total</th>
@@ -121,7 +129,8 @@
                             <td class="table-cell-G" id="amountTotal_G">0</td>
                             <td class="table-cell-C" id="amountTotal_C">0</td>
                             <td class="table-cell-U" id="amountTotal_U">0</td>
-                            <td class="table-cell-Hash"id="amountTotal_Hash">0</td>
+                            <td class="table-cell-Total" id="amountTotal_Total">0</td>
+                            <td class="table-cell-Hash" id="amountTotal_Hash">0</td>
                         </tr>
                     </table>
                 </div>
