Update JS to count more NT totals and handle # bonds properly.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <td class="table-cell-G" id="amountDNA_G">0</td>
                             <td class="table-cell-C" id="amountDNA_C">0</td>
                             <td class="table-cell-U" id="amountDNA_U">0</td>                            
-                            <td class="table-cell-Total" id="amoutDNA_Total">0</td>
+                            <td class="table-cell-Total" id="amountDNA_Total">0</td>
                             <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row base-type-RNA" id="row-RNA">
@@ -69,7 +69,7 @@
                             <td class="table-cell-G" id="amountRNA_G">0</td>
                             <td class="table-cell-C" id="amountRNA_C">0</td>
                             <td class="table-cell-U" id="amountRNA_U">0</td>                            
-                            <td class="table-cell-Total" id="amoutRNA_Total">0</td>
+                            <td class="table-cell-Total" id="amountRNA_Total">0</td>
                             <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row base-type-Fluoro" id="row-Fluoro">
@@ -79,7 +79,7 @@
                             <td class="table-cell-G" id="amountFluoro_G">0</td>
                             <td class="table-cell-C" id="amountFluoro_C">0</td>
                             <td class="table-cell-U" id="amountFluoro_U">0</td>                            
-                            <td class="table-cell-Total" id="amoutFluoro_Total">0</td>
+                            <td class="table-cell-Total" id="amountFluoro_Total">0</td>
                             <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row base-type-LNA" id="row-LNA">
@@ -89,7 +89,7 @@
                             <td class="table-cell-G" id="amountLNA_G">0</td>
                             <td class="table-cell-C" id="amountLNA_C">0</td>
                             <td class="table-cell-U" id="amountLNA_U">0</td>                            
-                            <td class="table-cell-Total" id="amoutLNA_Total">0</td>
+                            <td class="table-cell-Total" id="amountLNA_Total">0</td>
                             <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row base-type-OMe" id="row-OMe">
@@ -99,7 +99,7 @@
                             <td class="table-cell-G" id="amountOMe_G">0</td>
                             <td class="table-cell-C" id="amountOMe_C">0</td>
                             <td class="table-cell-U" id="amountOMe_U">0</td>                            
-                            <td class="table-cell-Total" id="amoutOMe_Total">0</td>
+                            <td class="table-cell-Total" id="amountOMe_Total">0</td>
                             <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row base-type-FANA" id="row-FANA">
@@ -109,7 +109,7 @@
                             <td class="table-cell-G" id="amountFANA_G">0</td>
                             <td class="table-cell-C" id="amountFANA_C">0</td>
                             <td class="table-cell-U" id="amountFANA_U">0</td>                            
-                            <td class="table-cell-Total" id="amoutFANA_Total">0</td>
+                            <td class="table-cell-Total" id="amountFANA_Total">0</td>
                             <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row base-type-ANA" id="row-ANA">
@@ -119,7 +119,7 @@
                             <td class="table-cell-G" id="amountANA_G">0</td>
                             <td class="table-cell-C" id="amountANA_C">0</td>
                             <td class="table-cell-U" id="amountANA_U">0</td>                            
-                            <td class="table-cell-Total" id="amoutANA_Total">0</td> 
+                            <td class="table-cell-Total" id="amountANA_Total">0</td> 
                             <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row" id="row-Total">
