Change NT order in table to match standards.

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                         <tr class="table-base-headings">
                             <th class="table-cell-type" id="tableHeadingType">Type</th>
                             <th class="table-cell-A" id="tableHeadingA">A</th>
-                            <th class="table-cell-T" id="tableHeadingT">T</th>
-                            <th class="table-cell-G" id="tableHeadingT">G</th>
+                            <th class="table-cell-G" id="tableHeadingG">G</th>                                                       
                             <th class="table-cell-C" id="tableHeadingC">C</th>
+                            <th class="table-cell-T" id="tableHeadingT">T</th> 
                             <th class="table-cell-U" id="tableHeadingU">U</th>
                             <th class="table-cell-Total" id="tableHeadingTotal">Total</th>
                             <th class="table-cell-Hash" id="tableHeadingHash">#</th>
@@ -55,9 +55,9 @@
                         <tr class="table-type-row base-type-DNA" id="row-DNA">
                             <th class="table-cell-type" id="tableHeadingDNA">DNA (dN)</th>
                             <td  class="table-cell-A" id="amountDNA_A">0</td>
-                            <td class="table-cell-T" id="amountDNA_T">0</td>
                             <td class="table-cell-G" id="amountDNA_G">0</td>
                             <td class="table-cell-C" id="amountDNA_C">0</td>
+                            <td class="table-cell-T" id="amountDNA_T">0</td>                            
                             <td class="table-cell-U" id="amountDNA_U">0</td>                            
                             <td class="table-cell-Total" id="amountDNA_Total">0</td>
                             <td class="table-cell-FILLER"></td>
@@ -65,9 +65,9 @@
                         <tr class="table-type-row base-type-RNA" id="row-RNA">
                             <th class="table-cell-type" id="tableHeadingRNA">RNA (rN)</th>
                             <td class="table-cell-A"id="amountRNA_A">0</td>
-                            <td class="table-cell-T" id="amountRNA_T">0</td>
                             <td class="table-cell-G" id="amountRNA_G">0</td>
                             <td class="table-cell-C" id="amountRNA_C">0</td>
+                            <td class="table-cell-T" id="amountRNA_T">0</td>                            
                             <td class="table-cell-U" id="amountRNA_U">0</td>                            
                             <td class="table-cell-Total" id="amountRNA_Total">0</td>
                             <td class="table-cell-FILLER"></td>
@@ -75,9 +75,9 @@
                         <tr class="table-type-row base-type-Fluoro" id="row-Fluoro">
                             <th class="table-cell-type" id="tableHeadingFluoro">2'Fluoro RNA (fN)</th>
                             <td class="table-cell-A" id="amountFluoro_A">0</td>
-                            <td class="table-cell-T" id="amountFluoro_T">0</td>
                             <td class="table-cell-G" id="amountFluoro_G">0</td>
                             <td class="table-cell-C" id="amountFluoro_C">0</td>
+                            <td class="table-cell-T" id="amountFluoro_T">0</td>                            
                             <td class="table-cell-U" id="amountFluoro_U">0</td>                            
                             <td class="table-cell-Total" id="amountFluoro_Total">0</td>
                             <td class="table-cell-FILLER"></td>
@@ -85,9 +85,9 @@
                         <tr class="table-type-row base-type-LNA" id="row-LNA">
                             <th class="table-cell-type" id="tableHeadingLNA">LNA (lN)</th>
                             <td class="table-cell-A" id="amountLNA_A">0</td>
-                            <td class="table-cell-T" id="amountLNA_T">0</td>
                             <td class="table-cell-G" id="amountLNA_G">0</td>
                             <td class="table-cell-C" id="amountLNA_C">0</td>
+                            <td class="table-cell-T" id="amountLNA_T">0</td>                            
                             <td class="table-cell-U" id="amountLNA_U">0</td>                            
                             <td class="table-cell-Total" id="amountLNA_Total">0</td>
                             <td class="table-cell-FILLER"></td>
@@ -95,9 +95,9 @@
                         <tr class="table-type-row base-type-OMe" id="row-OMe">
                             <th class="table-cell-type" id="tableHeadingOMe">2'OMe RNA (mN)</th>
                             <td class="table-cell-A" id="amountOMe_A">0</td>
-                            <td class="table-cell-T" id="amountOMe_T">0</td>
                             <td class="table-cell-G" id="amountOMe_G">0</td>
                             <td class="table-cell-C" id="amountOMe_C">0</td>
+                            <td class="table-cell-T" id="amountOMe_T">0</td>                            
                             <td class="table-cell-U" id="amountOMe_U">0</td>                            
                             <td class="table-cell-Total" id="amountOMe_Total">0</td>
                             <td class="table-cell-FILLER"></td>
@@ -105,9 +105,9 @@
                         <tr class="table-type-row base-type-FANA" id="row-FANA">
                             <th class="table-cell-type" id="tableHeadingFANA">FANA (aN)</th>
                             <td class="table-cell-A" id="amountFANA_A">0</td>
-                            <td class="table-cell-T" id="amountFANA_T">0</td>
                             <td class="table-cell-G" id="amountFANA_G">0</td>
                             <td class="table-cell-C" id="amountFANA_C">0</td>
+                            <td class="table-cell-T" id="amountFANA_T">0</td>                            
                             <td class="table-cell-U" id="amountFANA_U">0</td>                            
                             <td class="table-cell-Total" id="amountFANA_Total">0</td>
                             <td class="table-cell-FILLER"></td>
@@ -115,9 +115,9 @@
                         <tr class="table-type-row base-type-ANA" id="row-ANA">
                             <th class="table-cell-type" id="tableHeadingANA">ANA (araN)</th>
                             <td class="table-cell-A" id="amountANA_A">0</td>
-                            <td class="table-cell-T" id="amountANA_T">0</td>
                             <td class="table-cell-G" id="amountANA_G">0</td>
                             <td class="table-cell-C" id="amountANA_C">0</td>
+                            <td class="table-cell-T" id="amountANA_T">0</td>                            
                             <td class="table-cell-U" id="amountANA_U">0</td>                            
                             <td class="table-cell-Total" id="amountANA_Total">0</td> 
                             <td class="table-cell-FILLER"></td>
@@ -125,9 +125,9 @@
                         <tr class="table-type-row" id="row-Total">
                             <th class="table-cell-type" id="tableHeadingTotals">Total</th>
                             <td class="table-cell-A" id="amountTotal_A">0</td>
-                            <td class="table-cell-T" id="amountTotal_T">0</td>
                             <td class="table-cell-G" id="amountTotal_G">0</td>
                             <td class="table-cell-C" id="amountTotal_C">0</td>
+                            <td class="table-cell-T" id="amountTotal_T">0</td>                            
                             <td class="table-cell-U" id="amountTotal_U">0</td>
                             <td class="table-cell-Total" id="amountTotal_Total">0</td>
                             <td class="table-cell-Hash" id="amountTotal_Hash">0</td>
