Add background image, update Open Graph and Twitter Card info.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
         <meta charset = "utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:site" content="@AdaMcVean" />
+        <meta name="twitter:creator" content="@AdaMcVean" />
+        <meta name="twitter:title" content="Oligo Flipper" />
+        <meta name="twitter:description" content="Formats oligonucleotide sequences for synthesis, and provides modified base counts." />        
+        <meta name="twitter:image" content="https://oligo.adamcvean.com/Images/bg_DNA.jpg" />
+        <meta name="twitter:image:alt" content="A generic graphic of DNA molecules." />
+
+        <meta propery="og:title" content="Oligo Flipper" />
+        <meta name="description" content="Formats oligonucleotide sequences for synthesis, and provides modified base counts." />
+        <meta property="og:description" content="Formats oligonucleotide sequences for synthesis, and provides modified base counts." />
+        <meta property="og:url" content="https://oligo.adamcvean.com/" />
+        <meta property="og:image:url" content="https://oligo.adamcvean.com/Images/bg_DNA.jpg" />
+        <meta property="og:image:alt" content="A generic graphic of DNA molecules." />
+        <meta property="og:image:width" content="1920" />
+        <meta property="og:image:width" content="960" />
+        <meta property="og:type" content="website" />
+
+        <meta name="keywords" content="science, chemistry, ada, ada mcvean, adamcvean, matteo, zamaria, matteozamaria, matteo zamaria, oligo, DNA, RNA, oligonucleotide, dna synthesis, rna synthesis, crispr, cas9, crisprcas9, research, labwork, lab tools, stem, biology" />
         <link rel="apple-touch-icon" sizes="180x180" href="Icon/apple-touch-icon.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="Icon/favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="Icon/favicon-16x16.png" />
